--- a/exercise2.html
+++ b/exercise2.html
@@ -57,6 +57,7 @@
     } else {
        document.getElementById("output").innerHTML = "The area of the triangle is " + answer.toFixed(4);
     }
+    setTimeout(heron,1000);
 }
 </script>
 
